@@ -1,0 +1,41 @@
+#textdomain wesnoth-lib
+###
+### Definition of an progress bar, used to fade in the logo in the title screen.
+###
+
+[progress_bar_definition]
+	id = "title_screen"
+	description = "A progress bar used in the title screen to fade in the logo."
+
+	[resolution]
+
+		min_width = 440
+		min_height = 201
+
+		default_width = 440
+		default_height = 201
+
+		max_width = 440
+		max_height = 201
+
+		[state_enabled]
+
+			[draw]
+
+				[image]
+					# w = 0 means fit
+					# using percentage = 0 seems to fail for some reason...
+					w = "(if(percentage <= 0, 1, (width * percentage) / 100))"
+					h = "(height)"
+					name = "misc/logo.png"
+					resize_mode = "tile"
+				[/image]
+
+			[/draw]
+
+		[/state_enabled]
+
+	[/resolution]
+
+[/progress_bar_definition]
+
