@@ -230,17 +230,58 @@
 		height = "(screen_height)"
 
 		[grid]
-
+	
 			[row]
 
 				[column]
-					vertical_alignment = "bottom"
-					{_GUI_TIP_SECTION}	
-				[/column]
+					horizontal_grow = "true"
+					vertical_grow = "true"
 
-				[column]
-					horizontal_alignment = "right"
-					{_GUI_MENU_SECTION}
+					[stacked_widget]
+
+						[stack]
+
+							[layer]
+
+								[row]
+
+									[column]
+										vertical_alignment = "bottom"
+										{_GUI_TIP_SECTION}	
+									[/column]
+
+									[column]
+										horizontal_alignment = "right"
+										vertical_alignment = "bottom"
+										{_GUI_MENU_SECTION}
+									[/column]
+
+								[/row]
+
+							[/layer]
+
+							[layer]
+
+								[row]
+
+									[column]
+										vertical_alignment = "top"
+
+										[progress_bar]
+											id = "logo"
+											definition = "title_screen"
+										[/progress_bar]
+
+									[/column]
+
+								[/row]
+
+							[/layer]
+
+						[/stack]
+
+					[/stacked_widget]
+
 				[/column]
 
 			[/row]
