@@ -14,6 +14,7 @@ Version 1.9.0-svn:
    * Avoid resizing when next or previous button is pressed in the
      --new-widgets title screen
    * Added gui2 progress bar widget
+   * Added "animated" logo to the --new-widgets title screen
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
